[gd_scene load_steps=6 format=2]

[ext_resource path="res://Models/Train/loco.res" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/train.gd" type="Script" id=2]
[ext_resource path="res://Models/Train/axle.res" type="ArrayMesh" id=3]

[sub_resource type="BoxShape3D" id=1]
size = Vector3( 1.67877, 0.934617, 2.72102 )

[sub_resource type="BoxShape3D" id=2]
size = Vector3( 2.8341, 3.39295, 12.2893 )

[node name="train" type="Node3D"]
script = ExtResource( 2 )
front_track_path = NodePath("../../Tracks/track_drift1")
back_track_path = NodePath("../../Tracks/track_drift2")

[node name="front_axle" type="CharacterBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 0.999997, 0, 0, -8 )
script = null

[node name="mesh" type="MeshInstance3D" parent="front_axle"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 0.999996, 0, 0, 0 )
mesh = ExtResource( 3 )
surface_material_override/0 = null
script = null

[node name="CollisionShape" type="CollisionShape3D" parent="front_axle"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.707095, 0 )
shape = SubResource( 1 )
script = null

[node name="back_axle" type="CharacterBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 0.99999, 0, 0, 0 )
script = null

[node name="mesh" type="MeshInstance3D" parent="back_axle"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 0.999997, 0, 0, 0 )
mesh = ExtResource( 3 )
surface_material_override/0 = null
script = null

[node name="CollisionShape" type="CollisionShape3D" parent="back_axle"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.707095, 0 )
shape = SubResource( 1 )
script = null

[node name="train" type="CharacterBody3D" parent="."]
script = null

[node name="model" type="MeshInstance3D" parent="train"]
transform = Transform3D( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -4.392 )
mesh = ExtResource( 1 )
surface_material_override/0 = null
script = null

[node name="CollisionShape" type="CollisionShape3D" parent="train"]
transform = Transform3D( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.51492e-08, 2.21296, -3.98994 )
shape = SubResource( 2 )
script = null

[node name="front_axle_follow" type="PathFollow3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 0.999997, 0, 0, -8 )
offset = 8.0
rotation_mode = 4
loop = false
script = null

[node name="back_axle_follow" type="PathFollow3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 0.99999, 0, 0, 0 )
rotation_mode = 4
loop = false
script = null

[node name="front_sensor" type="PathFollow3D" parent="."]
script = null
